--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 			color:#33E0FF;
 		}
 		#subTitle{
-			font-size:40px;
+			font-size:35px;
+		}
+		#text{
+			font-size:15px;
 		}
 		</style>
 	</head>
@@ -29,12 +32,14 @@
 			<span id="subTitle">* GAME CONTROLLS *</span>
 			<br>
 			<br>
+			<span id="text">
 			ARROW KEY : MOVE BALL
 			<br>
 			<br>
 			GLAY BALL : PLAYER(YOU)
 			<br>
 			ORANGE BALL : GOAL
+			</span>
 		</center>
 	</body>
 </html>
